<resources>
    <string name="app_name">KeyforgeAssistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_brobnar">Brobnar</string>
    <string name="menu_dis">Dis</string>
    <string name="menu_untamed">Indomptés</string>
    <string name="menu_staralliance">Novalliance</string>
    <string name="menu_saurian">Saurus</string>
    <string name="menu_shadow">Ombres</string>
    <string name="menu_mars">Mars</string>
    <string name="menu_sanctum">Sanctum</string>
    <string name="menu_logos">Logos</string>
    <string name="card_list_menu_title">Liste des cartes</string>
</resources>
