<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_brobnar">

    <fragment
        android:id="@+id/nav_brobnar"
        android:name="com.saphirel.android.keyforgeassistant.ui.listing.houses.HouseFragment"
        android:label="@string/menu_brobnar"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="house"
            app:argType="string"
            android:defaultValue="brobnar" />
    </fragment>

    <fragment
        android:id="@+id/nav_dis"
        android:name="com.saphirel.android.keyforgeassistant.ui.listing.houses.HouseFragment"
        android:label="@string/menu_dis">
        <argument
            android:name="house"
            android:defaultValue="dis"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_logos"
        android:name="com.saphirel.android.keyforgeassistant.ui.listing.houses.HouseFragment"
        android:label="@string/menu_logos" >
        <argument
            android:name="house"
            app:argType="string"
            android:defaultValue="logos" />
    </fragment>

    <fragment
        android:id="@+id/nav_mars"
        android:name="com.saphirel.android.keyforgeassistant.ui.listing.houses.HouseFragment"
        android:label="@string/menu_mars" >
        <argument
            android:name="house"
            app:argType="string"
            android:defaultValue="mars" />
    </fragment>

    <fragment
        android:id="@+id/nav_sanctum"
        android:name="com.saphirel.android.keyforgeassistant.ui.listing.houses.HouseFragment"
        android:label="@string/menu_sanctum" >
        <argument
            android:name="house"
            app:argType="string"
            android:defaultValue="sanctum" />
    </fragment>

    <fragment
        android:id="@+id/nav_shadow"
        android:name="com.saphirel.android.keyforgeassistant.ui.listing.houses.HouseFragment"
        android:label="@string/menu_shadow" >
        <argument
            android:name="house"
            app:argType="string"
            android:defaultValue="shadow" />
    </fragment>

    <fragment
        android:id="@+id/nav_saurian"
        android:name="com.saphirel.android.keyforgeassistant.ui.listing.houses.HouseFragment"
        android:label="@string/menu_saurian" >
        <argument
            android:name="house"
            app:argType="string"
            android:defaultValue="saurian" />
    </fragment>

    <fragment
        android:id="@+id/nav_staralliance"
        android:name="com.saphirel.android.keyforgeassistant.ui.listing.houses.HouseFragment"
        android:label="@string/menu_staralliance" >
        <argument
            android:name="house"
            app:argType="string"
            android:defaultValue="staralliance" />
    </fragment>

    <fragment
        android:id="@+id/nav_untamed"
        android:name="com.saphirel.android.keyforgeassistant.ui.listing.houses.HouseFragment"
        android:label="@string/menu_untamed" >
        <argument
            android:name="house"
            app:argType="string"
            android:defaultValue="untamed" />
    </fragment>
</navigation>